# cuopt

./: .coderabbit.yaml  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  THIRD_PARTY_LICENSES  VERSION  build.sh  dependencies.yaml  print_env.sh  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yaml  build_images.yaml  build_images.yml  build_test_publish_images.yaml  build_test_publish_images.yml  cloud_ci.yaml  nightly.yaml  pr.yaml  self_hosted_service_test.yaml  service_nightly.yaml  test.yaml  test_images.yaml  trigger-breaking-change-alert.yaml
benchmarks/: README.md
benchmarks/linear_programming/: run_mps_files.sh
ci/: README.md  build-service.Dockerfile  build_cpp.sh  build_docs.sh  build_python.sh  build_wheel.sh  build_wheel_cuopt.sh  build_wheel_cuopt_mps_parser.sh  build_wheel_cuopt_server.sh  build_wheel_cuopt_sh_client.sh  build_wheel_libcuopt.sh  check_style.sh  test_cpp.sh  test_cpp_memcheck.sh  test_notebooks.sh  test_python.sh  test_self_hosted_service.sh  test_wheel_cuopt.sh  test_wheel_cuopt_server.sh  validate_wheel.sh
ci/docker/: Dockerfile  README.md  create_multiarch_manifest.sh  test_image.sh
ci/release/: README.md  update-version-cuopt.sh  update-version-rapids.sh  update-version.sh
ci/thirdparty-testing/: run_cvxpy_tests.sh  run_jump_tests.sh
ci/utils/: dli_nb_strip.py  git_helpers.py  install_boost.sh  install_boost_tbb.sh  nbtest.sh  nbtestlog2junitxml.py  notebook_list.py  redeploy_nvcf_function.py
cmake/: README.md  rapids_config.cmake
conda/: README.md
conda/environments/: all_cuda-118_arch-aarch64.yaml  all_cuda-118_arch-x86_64.yaml  all_cuda-128_arch-aarch64.yaml  all_cuda-128_arch-x86_64.yaml  all_cuda-129_arch-aarch64.yaml  all_cuda-129_arch-x86_64.yaml  all_cuda-130_arch-aarch64.yaml  all_cuda-130_arch-x86_64.yaml
cpp/: CMakeLists.txt  README.md  cuopt_cli.cpp
cpp/docs/: DEVELOPER_GUIDE.md
cpp/doxygen/: Doxyfile  main_page.md
cpp/libmps_parser/: CMakeLists.txt
cpp/libmps_parser/tests/: CMakeLists.txt  mps_parser_test.cpp
cpp/libmps_parser/tests/utilities/: common_utils.hpp
cpp/src/: CMakeLists.txt
cpp/tests/: CMakeLists.txt
datasets/: get_test_data.sh
datasets/cuopt_service_data/: config_id.json  config_name.json  config_version.json  cuopt_bad_format.json  cuopt_bad_format2.json  cuopt_problem_data.msgpack  cuopt_problem_data.pickle  cuopt_problem_data.zlib  cuopt_problem_data_broken.json  cuopt_unhandled_exception.json  forbidden.pickle  good_lp.json  service_data_200r.json  test-cli-api.json
datasets/distance_engine/: direct_transport_sample.csv  order_sample.csv  ref_cost_matrix.csv  target_locations_id.txt  traveltimes.csv  waypoint_matrix.txt
datasets/linear_programming/: afiro_original.mps  afiro_pdhg.mps  bad-mps-1.mps  bad-mps-10.mps  bad-mps-11.mps  bad-mps-12.mps  bad-mps-13.mps  bad-mps-14.mps  bad-mps-2.mps  bad-mps-3.mps  bad-mps-4.mps  bad-mps-5.mps  bad-mps-6.mps  bad-mps-7.mps  bad-mps-9.mps  bad-mps-bound-1.mps  bad-mps-bound-2.mps  bad-mps-fixed-objname-after-rows.mps  bad-mps-fixed-ranges-name.mps  bad-mps-fixed-ranges-value.mps  download_pdlp_test_dataset.sh  empty_matrix.mps  free-format-mps-1.mps  good-fixed-mps-2.mps  good-max.mps  good-mps-1-clrf.mps  good-mps-1-comments.mps  good-mps-1.mps  good-mps-fixed-empty-name.mps  good-mps-fixed-no-name.mps  good-mps-fixed-ranges.mps  (+13 more)
notebooks/: README.md
python/: .coveragerc  README.md
python/cuopt/cuopt/: CMakeLists.txt  __init__.py  _version.py
python/cuopt/cuopt/distance_engine/: CMakeLists.txt  __init__.py  waypoint_matrix.pxd  waypoint_matrix.py  waypoint_matrix_wrapper.pyx
python/cuopt/cuopt/linear_programming/: CMakeLists.txt  README.md  __init__.py  problem.py  pyproject.toml  setup.cfg
python/cuopt/cuopt/linear_programming/cuopt_mps_parser/: CMakeLists.txt  __init__.py  _version.py  parser.pxd  parser.py  parser_wrapper.pyx
python/cuopt/cuopt/linear_programming/cuopt_mps_parser/utilities/: __init__.py  exception_handler.py
python/cuopt/cuopt/linear_programming/data_model/: CMakeLists.txt  __init__.py  data_model.pxd  data_model.py  data_model_wrapper.pxd  data_model_wrapper.pyx
python/cuopt/cuopt/linear_programming/data_model/utilities/: __init__.py  exception_handler.py
python/cuopt/cuopt/linear_programming/internals/: CMakeLists.txt  __init__.py  internals.pyx
python/cuopt/cuopt/linear_programming/solution/: __init__.py  solution.py
python/cuopt/cuopt/linear_programming/solver/: CMakeLists.txt  __init__.py  solver.pxd  solver.py  solver_parameters.pyx  solver_wrapper.pyx
python/cuopt/cuopt/linear_programming/solver_settings/: __init__.py  solver_settings.py
python/cuopt/cuopt/routing/: CMakeLists.txt  __init__.py  assignment.py  re_routing.py  utils.py  utils_wrapper.pyx  validation.py  vehicle_routing.pxd  vehicle_routing.py  vehicle_routing_wrapper.pyx
python/cuopt/cuopt/routing/structure/: __init__.py  routing_utilities.pxd
python/cuopt/cuopt/tests/linear_programming/: test_incumbent_callbacks.py  test_lp_solver.py  test_parser.py  test_python_API.py
python/cuopt/cuopt/tests/routing/: save_restore_test.py  solver_test.py  test_cuopt_exception.py  test_cvrptw.py  test_data_model.py  test_distance_engine.py  test_error_logging.py  test_initial_solutions.py  test_pickup_delivery.py  test_prize_collection.py  test_re_routing.py  test_solver_settings.py  test_tsp.py  test_validation.py  test_vehicle_breaks.py  test_vehicle_dependent_service_times.py  test_vehicle_fixed_costs.py  test_vehicle_max_cost.py  test_vehicle_max_time.py  test_vehicle_order_match.py  test_vehicle_properties.py  test_vehicle_routing.py  test_vehicle_types.py  test_warnings.py
python/cuopt/cuopt/utilities/: __init__.py  exception_handler.py  type_casting.py  utils.py
python/libcuopt/: CMakeLists.txt  pyproject.toml
python/libcuopt/libcuopt/: __init__.py  _cli_wrapper.py  _version.py  load.py
python/libcuopt/libcuopt/tests/: test_cli.sh
(+740 files in other folders)
